@@ -1,21 +1,34 @@
 package com.bookbook.booklink.library_service.service;
 
+import com.bookbook.booklink.auth_service.model.Member;
+import com.bookbook.booklink.book_service.model.LibraryBook;
+import com.bookbook.booklink.book_service.service.LibraryBookService;
+import com.bookbook.booklink.common.dto.PageResponse;
+import com.bookbook.booklink.common.event.LockEvent;
 import com.bookbook.booklink.common.exception.CustomException;
 import com.bookbook.booklink.common.exception.ErrorCode;
 import com.bookbook.booklink.common.service.IdempotencyService;
-import com.bookbook.booklink.library_service.event.LibraryLockEvent;
 import com.bookbook.booklink.library_service.model.Library;
+import com.bookbook.booklink.library_service.model.LibraryLikes;
 import com.bookbook.booklink.library_service.model.dto.request.LibraryRegDto;
 import com.bookbook.booklink.library_service.model.dto.request.LibraryUpdateDto;
 import com.bookbook.booklink.library_service.model.dto.response.LibraryDetailDto;
+import com.bookbook.booklink.library_service.model.dto.response.LibraryDistanceProjection;
+import com.bookbook.booklink.library_service.repository.LibraryLikesRepository;
 import com.bookbook.booklink.library_service.repository.LibraryRepository;
+import com.bookbook.booklink.review_service.model.dto.response.ReviewListDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
  * Library 관련 비즈니스 로직 처리 서비스
@@ -29,7 +42,9 @@ import java.util.UUID;
 public class LibraryService {
 
     private final LibraryRepository libraryRepository;
+    private final LibraryLikesRepository libraryLikesRepository;
     private final IdempotencyService idempotencyService;
+    private final LibraryBookService libraryBookService;
 
     /**
      * 새로운 Library 등록
@@ -38,11 +53,14 @@ public class LibraryService {
      *
      * @param libraryRegDto Library 등록 정보 DTO
      * @param traceId       요청 멱등성 체크용 ID (클라이언트 전달)
-     * @param userId        요청 사용자 ID
+     * @param member        요청 사용자
      * @return 등록된 Library ID
      */
     @Transactional
-    public UUID registerLibrary(LibraryRegDto libraryRegDto, String traceId, UUID userId) {
+    public UUID registerLibrary(LibraryRegDto libraryRegDto, String traceId, Member member) {
+
+        UUID userId = member.getId();
+
         log.info("[LibraryService] [traceId={}, userId={}] register library initiate, name={}",
                 traceId, userId, libraryRegDto.getName());
 
@@ -50,10 +68,10 @@ public class LibraryService {
 
         // Redis Lock으로 멱등성 체크
         idempotencyService.checkIdempotency(key, 1,
-                () -> LibraryLockEvent.builder().key(key).build());
+                () -> LockEvent.builder().key(key).build());
 
         // Library 엔티티 생성 후 DB 저장
-        Library newLibrary = Library.toEntity(libraryRegDto);
+        Library newLibrary = Library.toEntity(libraryRegDto, member);
         Library savedLibrary = save(newLibrary);
 
         log.info("[LibraryService] [traceId={}, userId={}] register library success, name={}",
@@ -81,7 +99,7 @@ public class LibraryService {
 
         // Redis Lock으로 멱등성 체크
         idempotencyService.checkIdempotency(key, 1,
-                () -> LibraryLockEvent.builder().key(key).build());
+                () -> LockEvent.builder().key(key).build());
 
         // 기존 Library 조회 후 정보 갱신
         Library existingLibrary = findById(libraryUpdateDto.getLibraryId());
@@ -110,7 +128,7 @@ public class LibraryService {
         String key = idempotencyService.generateIdempotencyKey("library:delete", traceId);
 
         idempotencyService.checkIdempotency(key, 1,
-                () -> LibraryLockEvent.builder().key(key).build());
+                () -> LockEvent.builder().key(key).build());
 
         // 기존 Library 조회 후 삭제
         Library existingLibrary = findById(libraryId);
@@ -128,25 +146,59 @@ public class LibraryService {
      * @return 변환된 dto
      */
     @Transactional(readOnly = true)
-    public LibraryDetailDto getLibrary(UUID libraryId) {
+    public LibraryDetailDto getLibrary(UUID libraryId, List<LibraryBook> top5List, List<ReviewListDto> top5Review) {
 
         Library library = findById(libraryId);
+
+        return LibraryDetailDto.fromEntity(library, top5List, top5Review);
+    }
+
+    @Transactional(readOnly = true)
+    public LibraryDetailDto getMyLibrary(Member member) {
+        Library library = findByUserId(member.getId());
+
         return LibraryDetailDto.fromEntity(library);
     }
 
     /**
-     * 내 주변 3km 이내의 도서관 조회 (리스트 반환)
+     * 현재 위치를 기준으로 가장 가까운 순으로 도서관을 조회하고 페이지네이션 적용.
      *
-     * @param lat 현재위치(위도)
-     * @param lng 현재위치(경도)
-     * @return 현재위치로부터 3km 이내의 도서관 정보 리스트
+     * @param lat      현재위치(위도)
+     * @param lng      현재위치(경도)
+     * @param name     검색어
+     * @param pageable 페이지네이션 정보 (페이지 번호, 크기)
+     * @return 페이지네이션된 도서관 정보 DTO Page
      */
     @Transactional(readOnly = true)
-    public List<LibraryDetailDto> getLibraries(Double lat, Double lng) {
+    public PageResponse<LibraryDetailDto> getLibraries(Double lat, Double lng, String name, Pageable pageable) {
 
-        List<Library> libraries = libraryRepository.findNearbyLibraries(lat, lng);
+        Page<LibraryDistanceProjection> libraryPage = libraryRepository.findLibrariesOrderByDistance(lat, lng, name, pageable);
+        List<UUID> libraryIds = libraryPage.getContent().stream()
+                .map(p -> p.getLibrary().getId())
+                .toList();
 
-        return libraries.stream().map(LibraryDetailDto::fromEntity).toList();
+        List<LibraryBook> allLibraryBooks = libraryBookService.findTop5BooksList(libraryIds);
+
+        Map<UUID, List<LibraryBook>> topBooksMap = allLibraryBooks.stream()
+                .collect(Collectors.groupingBy(
+                        lb -> lb.getLibrary().getId(),
+                        Collectors.collectingAndThen(
+                                Collectors.toList(),
+                                list -> list.stream()
+                                        .limit(5)
+                                        .collect(Collectors.toList())
+                        )
+                ));
+        Page<LibraryDetailDto> dtoPage = libraryPage.map(projection -> {
+            Library library = projection.getLibrary();
+            Double distance = projection.getDistance();
+
+            List<LibraryBook> top5List = topBooksMap.getOrDefault(library.getId(), Collections.emptyList());
+
+            return LibraryDetailDto.fromEntity(library, distance, top5List);
+        });
+
+        return PageResponse.from(dtoPage);
     }
 
     /**
@@ -169,4 +221,54 @@ public class LibraryService {
         return libraryRepository.findById(libraryId)
                 .orElseThrow(() -> new CustomException(ErrorCode.LIBRARY_NOT_FOUND));
     }
+
+    public Library findByUserId(UUID userId) {
+        return libraryRepository.findByMemberId(userId);
+    }
+
+    /**
+     * 좋아요 누르기
+     */
+    public void likeLibrary(UUID libraryId, Member member) {
+        Library library = findById(libraryId);
+
+        if (libraryLikesRepository.existsByLibraryAndUserId(library, member.getId())) {
+            throw new CustomException(ErrorCode.LIBRARY_ALREADY_LIKE);
+        }
+
+        LibraryLikes newLike = LibraryLikes.create(library, member.getId());
+
+        library.like();
+        libraryLikesRepository.save(newLike);
+
+    }
+
+    /**
+     * 좋아요 취소
+     */
+    public void unlikeLibrary(UUID libraryId, Member member) {
+        Library library = findById(libraryId);
+
+        LibraryLikes existingLike = libraryLikesRepository.findByLibraryAndUserId(library, member.getId())
+                .orElseThrow(() -> new CustomException(ErrorCode.LIBRARY_LIKE_NOT_FOUND));
+
+        library.unlike();
+        libraryLikesRepository.delete(existingLike);
+    }
+
+    public Page<Library> findLikedLibraries(UUID userId, Pageable pageable) {
+        Page<LibraryLikes> libraryLikes = libraryLikesRepository.findAllByUserId(userId, pageable);
+
+        return libraryLikes.map(LibraryLikes::getLibrary);
+    }
+
+    public PageResponse<LibraryDetailDto> getLikedLibraries(Member member, Pageable pageable) {
+
+        Page<Library> libraryPage = findLikedLibraries(member.getId(), pageable);
+
+        Page<LibraryDetailDto> dtoPage = libraryPage.map(LibraryDetailDto::fromEntity);
+        return PageResponse.from(dtoPage);
+    }
+
+
 }
